<resources>
    <string name="app_name">Mappe2</string>
    <string name="stringaddstudent">Add student</string>
    <string name="stringdeletestudent">Delete student</string>
    <string name="stringchangestudent">Change student</string>
    <string name="stringsendnewmessage">Send new message</string>
    <string name="stringpreferences">Preferences</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="change">Change student</string>
    <string name="delete">Delete student</string>
    <string name="add_new_student">Add new student</string>
    <string name="details_about_student">Details about student</string>
    <string name="first_name">First name:</string>
    <string name="last_name">Last name:</string>
    <string name="id">ID:</string>
    <string name="phonenumber">Phonenumber:</string>
    <string name="edit_student">Edit student</string>
    <string name="delete_student">Delete student</string>
    <string name="message">Message:</string>
    <string name="send_new_message">Send new message</string>
    <string name="send_message">Send message</string>
    <string name="send_later">Send later</string>
    <string name="send_now">Send now</string>
    <string name="settings">Settings</string>
    <string name="weekly_message">Send out weekly message</string>
    <string name="weekly_message_to_all">Send out weekly messages to all students</string>
</resources>
